Fix list alignments

--- a/sass/textpattern.scss
+++ b/sass/textpattern.scss
@@ -319,6 +319,7 @@ input[name="form_preview"] {
 
 .plain-list {
     list-style: none;
+    padding-left: 0;
 }
 
 
@@ -811,7 +812,7 @@ table#edit {
 
 .recent li {
     list-style: decimal-leading-zero;
-    margin-left: 1em;
+    margin-left: 2em;
 }
 
 
